# ldgraph

./: .gitignore  LICENSE  README.md  ldgraph.py  pyproject.toml
core/: binding_model.py  config.py  updater.py
example/: data.csv  data.txt
icons/: app_icon.icns  background.afdesign
src/ldgraph/: main.py
src/ldgraph/core/: binding_model.py  updater.py
src/ldgraph/ui/: io_controller.py  main_window.py  menu_builder.py
ui/: main_window.py  plot_widget.py
