[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldgraph"
version = "0.3.0"
description = "A simple curve fitting tool"
readme = "README.md"
authors = [
  { name = "Logan Donaldson" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "colorama",
    "nmrglue",
    "numpy",
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "pyqtgraph",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]

[project.scripts]
ldgraph = "ldgraph.main:main"