[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldgraph"
dynamic = ["version"]
description = "A simple curve fitting tool"
readme = "README.md"
authors = [
  { name = "Logan Donaldson" }
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "colorama",
    "nmrglue",
    "numpy",
    "PyQt6",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "pyqtgraph",
    "scipy"
]

[tool.setuptools.dynamic]
version = {attr = "ldgraph.core.updater.VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ldgraph*"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest"
]

[project.scripts]
ldgraph = "ldgraph.main:main"